--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,321 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./variables.scss";
+
+* {
+    margin: 0;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    background-color: $background;
+    max-width: 100%;
+}
+.jost-regular {
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
+}
+
+.jost-bold {
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+}
+
+.lato-thin {
+    font-family: "Lato", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+}
+
+.lato-light {
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.lato-regular {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
+}
+
+.lato-semi-bold {
+    font-family: "Lato", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.lato-bold {
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.lato-black {
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+}
+
+.lato-thin-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+}
+
+.lato-light-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.lato-regular-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.lato-bold-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+}
+
+.lato-black-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+}
+
+.tag {
+    opacity: 0;
+    transform: translate(0, -20px);
+    transition: all 1s;
+}
+
+.tag.visible {
+    opacity: 1;
+    transform: translate(0, 0);
+}
+.header,
+.footer {
+    width: 100%;
+    position: absolute;
+    z-index: 10;
+}
+
+.logo {
+    //background: url("./assets/images/logo.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 1rem;
+    color: $font-color;
+}
+
+.logo span {
+    color: $violet;
+}
+
+
+.side-menu {
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: $background;
+    width: 100%;
+    height: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    transition: all 0.5s;
+    color: $alt-bg;
+    z-index: 100;
+}
+
+.side-menu .intestazione {
+    width: 90%;
+    margin-top: 7rem;
+}
+
+.side-menu .intestazione h2 {
+    font-size: 4rem;
+    line-height: 4rem;
+    margin: 0;
+}
+
+.side-menu .intestazione p {
+    font-size: 2rem;
+}
+
+.intestazione .line {
+    margin: 5px 0;
+    width: 90%;
+    height: 1px;
+    background-color: $alt-bg;
+}
+
+.side-menu .logo-menu {
+    width: 70vw;
+    height: 70vw;
+    //background: url("./assets/images/logo.png");
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+}
+
+.side-menu .link-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.button {
+    border: none;
+    background-color: $violet;
+    color: $background;
+    padding: 1rem 2rem;
+    border-radius: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.button:hover {
+    filter: brightness(1.2);
+}
+
+.section-head {
+    width: 300px;
+    position: relative;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    letter-spacing: 1px;
+    z-index: 10;
+    color: $red;
+}
+.section-subtitle {
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    top: 5rem;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    font-size: 5rem;
+    font-weight: 700;
+    color: #bababa80;
+    margin: 0;
+    margin-top: -17px;
+    width: 100%;
+    z-index: 1;
+}
+
+.section-box {
+    position: relative;
+    color: $font-color;
+    width: 80%;
+    padding: 4rem 0;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.side-menu .social-box {
+    //position: absolute;
+    //right: 5rem;
+    //top: 50%;
+    //transform: translate(0, -50%);
+    margin-top: 10px;
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.social-box a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+
+
+.ig {
+    background: url("./assets/images/ig.png");
+}
+
+.yt {
+    background: url("./assets/images/yt.png");
+}
+
+
+.tk {
+    background: url("./assets/images/tk.png");
+}
+.social {
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    background: none !important;
+    //border: 1px solid $font-color;
+    transition: all 0.2s ease-in-out;
+}
+
+.social:has(a:hover) {
+    width: 2.3rem;
+    height: 2.3rem;
+}
+
+.side-menu .social {
+    width: 3rem;
+    height: 3rem;
+}
+
+.social-icon {
+    width: 70%;
+    height: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-clip: content-box;
+}
+@media screen and (max-width:850px) {
+
+
+    .side-menu {
+        display: flex;
+    }
+
+    .section-box {
+        width: 100%;
+        padding: 3rem 0;
+    }
+
+    .section-head {
+        margin-bottom: 0;
+    }
+
+    .section-subtitle {
+        display: none;
+    }
+}
