creating specs and latest-works pages, fix style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,8 @@
     </div>
   </div>
 </div>
+<app-specialita></app-specialita>
+<app-ultimi-scatti></app-ultimi-scatti>
 <app-chi-sono></app-chi-sono>
 <app-contatti></app-contatti>
 <app-footer></app-footer>
