--- a/src/app/components/contatti/contatti.component.html
+++ b/src/app/components/contatti/contatti.component.html
@@ -1,6 +1,5 @@
 <section name="contatti" class="section-box lato-regular tag contatti-tag">
-    <h4 class="section-head lato-regular yellow">CONTATTAMI</h4>
-    <h2 class="section-subtitle">CONTATTAMI</h2>
+    <h4 class="section-head lato-regular">Contattami</h4>
     <div class="mail">
         <div class="fields">
             <input type="text" class="form-control lato-regular" [formControl]="nome" placeholder="Nome..."
