--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
         <div class="link-box" (click)="goTo($event,'specs')">
             <p class="nav-link">Specialità</p>
         </div>
-        <div class="link-box" (click)="goTo($event,'ultimi-scatti')">
+        <div class="link-box" (click)="goTo($event,'ultimi_scatti')">
             <p class="nav-link">Ultimi scatti</p>
         </div>
         <div class="link-box" (click)="goTo($event,'chi_sono')">
@@ -21,18 +21,24 @@
     </div>
     <div class="social-box">
         <div class="social button-ig">
-            <div class="ig social-icon">
-                <a class="" href="https://www.instagram.com/noroykeys/" target="_blank"></a>
+            <div class="social-icon">
+                <a class="" href="" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </div>
         </div>
         <div class="social button-tk">
-            <div class="tk social-icon">
-                <a class="" href="https://www.tiktok.com/@noroykeys" target="_blank"></a>
+            <div class="social-icon">
+                <a class="" href="" target="_blank">
+                    <i class="fab fa-tiktok"></i>
+                </a>
             </div>
         </div>
         <div class="social button-yt">
-            <div class="yt social-icon">
-                <a class="" href="https://www.youtube.com/@NoroyKeys" target="_blank"></a>
+            <div class="social-icon">
+                <a class="" href="" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                </a>
             </div>
         </div>
     </div>
