--- a/src/app/components/chi-sono/chi-sono.component.html
+++ b/src/app/components/chi-sono/chi-sono.component.html
@@ -1,28 +1,25 @@
 <section name="chi_sono" class="chi-sono-box lato-regular tag chi-sono-tag">
-    <h4 class="section-head lato-regular yellow red">CHI SONO</h4>
-    <h2 class="section-subtitle">CHI SONO</h2>
+    <h4 class="section-head lato-regular">Su di me</h4>
     <div class="chi-sono">
         <div class="chi-sono-img">
             <img src="../../../assets/images/profile-img-3.jpg" alt="">
         </div>
         <div class="chi-sono-text">
-            <h3 class="lato-bold blue">Ciao a tutti! Sono Gabriele</h3>
+            <h3 class="lato-bold blue">Ciao a tutti!</h3>
             <!-- <h3 class="lato-light yellow">Content Creator e Youtuber</h3> -->
             <p class="lato-regular">
-                Sono un content creator nel campo musicale. <br />Oltre a essere un musicista (chitarrista), ho iniziato
-                la
-                mia carriera sui social nel 2018, pubblicando cover delle mie canzoni preferite. Dal 2021, ho deciso di
-                cambiare il mio approccio sui social, puntando maggiormente sull'intrattenimento attraverso format
-                musicali innovativi.
+                Lorem ipsum dolor sit amet.<br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quas
+                doloremque reprehenderit quasi quisquam repellendus reiciendis voluptatibus, quidem molestias tempore!
+                Perspiciatis facere vero consequuntur vitae ipsam fuga eveniet voluptates quidem quia.
             </p>
             <p class="lato-regular">
-                Il mio format di punta è il "Prova a non cantare", una sfida musicale in cui gli spettatori devono
-                ascoltare 10 canzoni proposte nel video e cercare di non farsi trasportare dalla voglia di cantarle.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quas
+                doloremque reprehenderit quasi quisquam repellendus reiciendis voluptatibus, quidem molestias.
             </p>
             <p class="lato-regular">
-                Questi video mi hanno portato ad ottenere molta visibilità sui social, con quasi 150k di follower su TikTok,
-                più di 50k su YouTube e quasi 20k su Instagram. Il mio obiettivo sui social è regalare alle persone che mi
-                seguono momenti di spensieratezza ed intrattenimento, condividendo la mia passione per la musica.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quas
+                doloremque reprehenderit quasi quisquam repellendus reiciendis voluptatibus, quidem molestias tempore!
+                Perspiciatis facere vero consequuntur vitae ipsam fuga eveniet voluptates quidem quia.
             </p>
             <button class="button lato-bold" (click)="contattami('contatti')">Contattami</button>
         </div>
