--- a/src/app/components/chi-sono/chi-sono.component.scss
+++ b/src/app/components/chi-sono/chi-sono.component.scss
@@ -5,7 +5,7 @@
     padding: 4rem 10rem;
     margin: 0 auto;
     display: flex;
-    align-items: center;
+    //align-items: center;
     justify-content: center;
     flex-direction: column;
 }
@@ -69,6 +69,7 @@
         padding: 1rem 0;
     }
     .chi-sono-box{
+        width: 100%;
         padding: 3rem 0;
     }
 }
