--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,11 +6,31 @@
     </div> -->
     <div class="info lato-regular">
         <div class="contacts">
-            <a href="mailto:info@lucapuglisiwebdeveloper.it"><i class="fas fa-envelope"></i>  info&#64;lucapuglisiwebdeveloper.it</a>
+            <a href=""><i class="fas fa-envelope"></i>  info&#64;studiofoto.it</a>
         </div>
-        <div class="social">
-            <i (click)="openLink('https://www.linkedin.com/in/luca-puglisi-97aabb124/')" class="fab fa-linkedin"></i>
+        <div class="social-box">
+            <div class="social button-ig">
+                <div class="social-icon">
+                    <a class="" href="" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="social button-tk">
+                <div class="social-icon">
+                    <a class="" href="" target="_blank">
+                        <i class="fab fa-tiktok"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="social button-yt">
+                <div class="social-icon">
+                    <a class="" href="" target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
-    <p class="copy lato-bold">© 2024. Developed by Luca Puglisi. All right reserved.</p>
+    <p class="copy lato-bold">© 2024. Developed by <a href="https://lucapuglisiwebdeveloper.it" target="_blank">Luca Puglisi</a>. All right reserved.</p>
 </footer>
