setup photo grid and fix menu style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
       </p>
     </div>
   </div>
+  <button class="button lato-bold contattami" (click)="contattami('contatti')">Contattami</button>
 </div>
 <app-specialita></app-specialita>
 <app-ultimi-scatti></app-ultimi-scatti>
@@ -29,20 +30,26 @@
     <p class="lato-bold">Seguimi su</p>
     <div class="social-box">
       <div class="social button-ig">
-        <div class="ig social-icon">
-          <a class="" href="https://www.instagram.com/noroykeys/" target="_blank"></a>
-        </div>
+          <div class="social-icon">
+              <a class="" href="" target="_blank">
+                  <i class="fab fa-instagram"></i>
+              </a>
+          </div>
       </div>
       <div class="social button-tk">
-        <div class="tk social-icon">
-          <a class="" href="https://www.tiktok.com/@noroykeys" target="_blank"></a>
-        </div>
+          <div class="social-icon">
+              <a class="" href="" target="_blank">
+                  <i class="fab fa-tiktok"></i>
+              </a>
+          </div>
       </div>
       <div class="social button-yt">
-        <div class="yt social-icon">
-          <a class="" href="https://www.youtube.com/@NoroyKeys" target="_blank"></a>
-        </div>
+          <div class="social-icon">
+              <a class="" href="" target="_blank">
+                  <i class="fab fa-youtube"></i>
+              </a>
+          </div>
       </div>
-    </div>
+  </div>
   </div>
 </div>
