--- a/src/app/components/chi-sono/chi-sono.component.html
+++ b/src/app/components/chi-sono/chi-sono.component.html
@@ -2,7 +2,7 @@
     <h4 class="section-head lato-regular">Su di me</h4>
     <div class="chi-sono">
         <div class="chi-sono-img">
-            <img src="../../../assets/images/profile-img-3.jpg" alt="">
+            <img src="../../../assets/images/profile.jpg" alt="">
         </div>
         <div class="chi-sono-text">
             <h3 class="lato-bold blue">Ciao a tutti!</h3>
