--- a/src/app/components/ultimi-scatti/ultimi-scatti.component.html
+++ b/src/app/components/ultimi-scatti/ultimi-scatti.component.html
@@ -1,3 +1,53 @@
 <div name="ultimi_scatti" class="section-box lato-regular tag">
     <h4 class="section-head lato-regular">Ultimi scatti</h4>
+    <div class="scatti-grid">
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/albine.jpg" alt=""class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/audi.jpg" alt=""class="roll-x">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/albine2.jpg" alt=""class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/baby.jpg" alt="" class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/persona3.jpg" alt="" class="roll-x">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/land2.jpg" alt="" class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/persona1.jpg" alt="" class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/land.jpg" alt="" class="roll-x">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/land3.jpg" alt="" class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/concert2.jpg" alt="" class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/land4.jpg" alt="" class="roll-x">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/mustang.jpg" alt="" class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/party.jpg" alt="" class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/concert.jpg" alt="" class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/persona2.jpg" alt="" class="roll-y">
+        </div>
+        <div class="scatto-box">
+            <img src="../../../assets/images/portfolio/colibri.jpg" alt="" class="roll-y">
+        </div>
+    </div>
 </div>
