--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -58,6 +58,15 @@
     // height: 2.85rem;
 
 }
+.contattami{
+    position: absolute;
+    bottom: 6rem;
+    right: 4rem;
+    width: 220px;
+}
+.social-head p{
+    text-align: center;
+}
 @media screen and (max-width: 850px) {
     .scroll-top {
         bottom: 10rem;
@@ -75,5 +84,10 @@
     }
     .slider h2 {
         font-size: 120px;
+    }
+    .contattami{
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: 90%;
     }
 }
