--- a/src/styles.scss
+++ b/src/styles.scss
@@ -182,7 +182,10 @@ body {
     justify-content: center;
     align-items: center;
 }
-
+.side-menu .nav-link{
+    margin: 10px;
+    font-size: 1.2rem;
+}
 .button {
     border: none;
     background-color: $violet;
