--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div name="home" class="main-container">
+  <h1 class="lato-bold title">Studio Fotografico</h1>
   <div class="presentation">
     <div class="presentation-desc lato-regular">
       <h2 class="lato-bold">Benvenuti!</h2>
