--- a/src/app/components/chi-sono/chi-sono.component.html
+++ b/src/app/components/chi-sono/chi-sono.component.html
@@ -5,7 +5,7 @@
             <img src="../../../assets/images/profile.jpg" alt="">
         </div>
         <div class="chi-sono-text">
-            <h3 class="lato-bold blue">Ciao a tutti!</h3>
+            <h3 class="lato-bold blue">Ciao</h3>
             <!-- <h3 class="lato-light yellow">Content Creator e Youtuber</h3> -->
             <p class="lato-regular">
                 Lorem ipsum dolor sit amet.<br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quas
