--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -49,7 +49,7 @@ a {
 }
 
 .contacts:hover {
-    color: $violet;
+    color: $secondary-color;
 }
 
 // .social i {
@@ -60,7 +60,7 @@ a {
 
 // .social i:hover {
 //     font-size: 1.8rem;
-//     color: $violet;
+//     color: $secondary-color;
 // }
 
 .copy {
