--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -13,7 +13,7 @@
 }
 
 .header h1 span {
-    color: $violet;
+    color: $secondary-color;
 }
 
 .header-mobile {
@@ -48,7 +48,7 @@
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: $violet;
+    background-color: $secondary-color;
     height: 2px;
     width: 0;
     transition: all 0.3s;
@@ -63,7 +63,7 @@
     // .link-box:hover{
     //     background-color: $background !important;
     //     .nav-link{
-    //         color: $violet !important;
+    //         color: $secondary-color !important;
     //     }
     // }
     // .header-logo h1, .header-logo span{
@@ -152,13 +152,13 @@
 .link-box:hover{
     p {
         font-weight: bold;
-        color: $violet;
+        color: $secondary-color;
     }
 }
 .link-box:hover::after{
     p {
         font-weight: bold;
-        color: $violet;
+        color: $secondary-color;
     }
     width: 80%;
 }
@@ -166,7 +166,7 @@
 
 .active {
     font-weight: bold;
-    color: $violet;
+    color: $secondary-color;
 }
 
 @media screen and (min-width: 851px) and (max-width:1080px) {
