--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,5 @@
 $background: #0a080d;
-$font-color: #f2f6ff;
-$violet: #ca2b91;
-$red: #bc3219;
 $alt-bg: #677570;
+$font-color: #f2f6ff;
+$secondary-color: #ca2b91;
 $border: #9a9a9a4f
